Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "r99999" numbers are Subversion revision numbers.

Changes for current svn
=======================

 o 18267 2017-05-29 marcel
 Fixed DropIfNotDeliverableUniqueOnly md5sum check to avoid updates
 
 o 18266 2017-05-19 marcel
 Fixed race condition in QosData which could lead to ConcurrentModificationException during dead messages

 o 18264 2017-05-11: fixed ServerDispatchManager.shutdown since it generated an exception on explicit logouts
 
 o 18261 2017-05-08: after exception leading to DEAD callback status the transient sessions where reconnected but did not get any updates anymore.
   This has now been fixed by shutting down the session info so that a reconnect leads to a new session info and thereby a new session
 
 o 18257 2017-03-21 Fixed BlockingQueueWrapper.java to not peek any more with danger of loop

 o 18256 made the callback queue block (default 1 minute) in case the thread pool is exhausted. It
   can be configured with:
      dispatch/callback/maxWaitTime 60000
   and should be used in conjunction with a customized specific pool size:
      dispatch/callback/maximumPoolSize 20
 
 o 18255 2017-03-21 Avoid dependency on "org.apache.commons.lang"
   In JdbcConnectionPool.java replaced StrTokenizer with StringTokenizer
 
 o 18253 2017-01-03 Mime plugin DropIfNotDeliverableUniqueOnly supports MD5SUM check
   MimeAccessPlugin[DropIfNotDeliverableUniqueOnly][1.0]=org.xmlBlaster.contrib.mime.DropIfNotDeliverableUniqueOnly,useMd5Sum=true
   With useMd5Sum=true the content of most current message is checked if it is identical to previous and suppressed

 o 18248 2016-11-26 Administrative SessionInfo MsgUnit[] get() added

 o 18247 2016-11-26 startsWith events added "topicStartsWith/hello.2/event/subscribe"
 
 o 18241 Replication: added interface I_StatementInjector to allow own implementations for objects of type OTHER (as for example SDO_GEOMETRY in ORACLE) 

 o 18235 Property.java 2016-08-16 marcel