@@ -4,6 +4,10 @@ The "r99999" numbers are Subversion revision numbers.
 Changes for current svn
 =======================
 
+ o 18270 2017-06-22 marcel
+ Introduced SubscribeQos KEY_BOUNCE_CP = "_bounce:"
+ ClientProperties with this prefix are bounced back with SubscribeReturnQos
+
  o 18267 2017-05-29 marcel
  Fixed DropIfNotDeliverableUniqueOnly md5sum check to avoid updates
  
